working-assets/css/gender-categories.css
.shop-by-category .categorylink {
  aspect-ratio: 1;
  aspect-ratio: 1 / 1;
}

.shop-by-category .categorylink {
  position: relative;

  & img {
    object-fit: cover;
    filter: brightness(1);
    transition: scale 10s ease;
  }

  &:hover img {
    filter: brightness(1.1);
    scale: 1.2;
  }

  &:hover p {
    scale: 1.1;
    transform: translateY(-48%);
    text-shadow: 0 0 30px rgba(27, 27, 27, 0.65);
  }
}

.category-grid {
  max-width: 90vw;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);
  grid-gap: 10px;
}

.category-grid a {
  overflow: hidden;
}

.category-grid img {
  transition: scale 10s ease;
  scale: 1;
  z-index: -1;
  position: relative;
}

.category-grid a:hover>img {
  scale: 1.2;
}

@media screen and (width > 1000px) {
  .category-grid {
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: 1fr;
  }
}

